correct class balance %

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -583,7 +583,7 @@ To do this fit, we configured the Tree's hyperparameters with a bad nature and, 
 
 As another example, the same algorithm was run but on \cref{target1} and using the same available data as in \cref{fg:lowROCAUC}.
 For this problem we are looking for those useres that had lived in the endemic region in the past regardless of their current endemic situation.
-This problem has a slightly better class balance, where the positive class constitutes $4\%$ of all samples.
+This problem does not suffer from class imbalance, where the positive class constitutes $30\%$ of all samples.
 In \cref{fg:highROCAUC} we show a similar figure as in \cref{fg:lowROCAUC} to illustrate the difference ``ROC'' curves that result from this optimization.
 
 \begin{figure}[h!]
